--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: dart_canvas_player
-description: An absolute bare-bones web app.
-# version: 1.0.0
-#homepage: https://www.example.com
+version: 1.0.0
+description: >-
+  Do you have want to record a Canvas element?
+homepage: https://github.com/eatsjobs/dart-canvas-player
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
